[gd_scene load_steps=43 format=2]

[ext_resource path="res://assets/player.png" type="Texture" id=1]
[ext_resource path="res://assets/Cursor64.png" type="Texture" id=2]
[ext_resource path="res://scripts/Cursor.gd" type="Script" id=3]
[ext_resource path="res://assets/Font/Raleway-Regular.ttf" type="DynamicFontData" id=4]
[ext_resource path="res://assets/tile.png" type="Texture" id=5]
[ext_resource path="res://scripts/OBJProperties.gd" type="Script" id=6]
[ext_resource path="res://scripts/pausemenu.gd" type="Script" id=7]
[ext_resource path="res://assets/spawnertexture.png" type="Texture" id=8]
[ext_resource path="res://assets/humanoidlogo.png" type="Texture" id=9]
[ext_resource path="res://assets/Cursor/cursornormal.png" type="Texture" id=10]
[ext_resource path="res://assets/Font/Raleway-Black.ttf" type="DynamicFontData" id=11]
[ext_resource path="res://assets/slanttile.png" type="Texture" id=12]
[ext_resource path="res://assets/Sphere.png" type="Texture" id=13]
[ext_resource path="res://assets/rightslanttile.png" type="Texture" id=14]
[ext_resource path="res://assets/Font/Raleway-Bold.ttf" type="DynamicFontData" id=15]
[ext_resource path="res://assets/leftslanttile.png" type="Texture" id=16]
[ext_resource path="res://prefabs/RagdollHumanoid.tscn" type="PackedScene" id=17]
[ext_resource path="res://scripts/Startup.gd" type="Script" id=18]

[sub_resource type="OccluderPolygon2D" id=1]
polygon = PoolVector2Array( 0, 0, 64, 0, 64, 0, 0, 0 )

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, 0, 64, 0, 64, 64, 0, 64 )

[sub_resource type="NavigationPolygon" id=3]
vertices = PoolVector2Array( 0, 64, 64, 0, 64, 64 )
polygons = [ PoolIntArray( 0, 1, 2 ) ]

[sub_resource type="OccluderPolygon2D" id=4]
polygon = PoolVector2Array( 0, 64, 64, 0, 64, 64 )

[sub_resource type="ConvexPolygonShape2D" id=5]
points = PoolVector2Array( 0, 64, 64, 0, 64, 64 )

[sub_resource type="NavigationPolygon" id=6]
vertices = PoolVector2Array( 0, 0, 64, 64, 0, 64 )
polygons = [ PoolIntArray( 0, 1, 2 ) ]

[sub_resource type="OccluderPolygon2D" id=7]
polygon = PoolVector2Array( 0, 0, 64, 64, 0, 64, 0, 0, 0, 0 )

[sub_resource type="ConvexPolygonShape2D" id=8]
points = PoolVector2Array( 0, 0, 64, 64, 0, 64 )

[sub_resource type="TileSet" id=9]
0/name = "tile.png 0"
0/texture = ExtResource( 5 )
0/tex_offset = Vector2( 0, 0 )
0/modulate = Color( 1, 1, 1, 1 )
0/region = Rect2( 0, 0, 64, 64 )
0/tile_mode = 0
0/occluder_offset = Vector2( 0, 0 )
0/occluder = SubResource( 1 )
0/navigation_offset = Vector2( 0, 0 )
0/shape_offset = Vector2( 0, 0 )
0/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
0/shape = SubResource( 2 )
0/shape_one_way = false
0/shape_one_way_margin = 1.0
0/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 2 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
0/z_index = 0
1/name = "leftslanttile.png 1"
1/texture = ExtResource( 16 )
1/tex_offset = Vector2( 0, 0 )
1/modulate = Color( 1, 1, 1, 1 )
1/region = Rect2( 0, 0, 64, 64 )
1/tile_mode = 0
1/occluder_offset = Vector2( 0, 0 )
1/occluder = SubResource( 4 )
1/navigation_offset = Vector2( 0, 0 )
1/navigation = SubResource( 3 )
1/shape_offset = Vector2( 0, 0 )
1/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
1/shape = SubResource( 5 )
1/shape_one_way = false
1/shape_one_way_margin = 1.0
1/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 5 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
1/z_index = 0
2/name = "rightslanttile.png 2"
2/texture = ExtResource( 14 )
2/tex_offset = Vector2( 0, 0 )
2/modulate = Color( 1, 1, 1, 1 )
2/region = Rect2( 0, 0, 64, 64 )
2/tile_mode = 0
2/occluder_offset = Vector2( 0, 0 )
2/occluder = SubResource( 7 )
2/navigation_offset = Vector2( 0, 0 )
2/navigation = SubResource( 6 )
2/shape_offset = Vector2( 0, 0 )
2/shape_transform = Transform2D( 1, 0, 0, 1, 0, 0 )
2/shape = SubResource( 8 )
2/shape_one_way = false
2/shape_one_way_margin = 1.0
2/shapes = [ {
"autotile_coord": Vector2( 0, 0 ),
"one_way": false,
"one_way_margin": 1.0,
"shape": SubResource( 8 ),
"shape_transform": Transform2D( 1, 0, 0, 1, 0, 0 )
} ]
2/z_index = 0

[sub_resource type="DynamicFont" id=10]
size = 32
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=11]
size = 72
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=12]
size = 48
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=13]
size = 36
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=14]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=15]
size = 32
font_data = ExtResource( 4 )

[sub_resource type="DynamicFont" id=16]
size = 50
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=17]
size = 26
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=18]
size = 50
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=19]
size = 80
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=20]
size = 28
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=21]
size = 72
font_data = ExtResource( 11 )

[sub_resource type="DynamicFont" id=22]
size = 28
font_data = ExtResource( 15 )

[sub_resource type="DynamicFont" id=23]
size = 28
font_data = ExtResource( 15 )

[sub_resource type="Environment" id=24]
background_mode = 4
background_energy = 0.51
dof_blur_far_enabled = true
glow_intensity = 0.5
glow_bloom = 0.7
glow_blend_mode = 0

[node name="World" type="Node2D"]

[node name="Cursor" type="Area2D" parent="."]
light_mask = 524289
z_index = 99
script = ExtResource( 3 )
traillength = 10
targetPath = NodePath(".")

[node name="CollisionPolygon2D" type="CollisionPolygon2D" parent="Cursor"]
polygon = PoolVector2Array( -16, 16, -16, -16, 16, -16, -16, 16 )

[node name="Cursor" type="Sprite" parent="Cursor"]
modulate = Color( 0.972549, 0.776471, 0.00392157, 1 )
texture = ExtResource( 10 )

[node name="Humanoid" type="Sprite" parent="Cursor"]
visible = false
modulate = Color( 1, 1, 1, 0.509804 )
texture = ExtResource( 9 )

[node name="Line2D" type="Line2D" parent="Cursor"]
position = Vector2( 0, -8 )
width = 15.0
default_color = Color( 0.952941, 0.921569, 0.45098, 1 )

[node name="Detector" type="Area2D" parent="Cursor"]

[node name="Collision" type="CollisionPolygon2D" parent="Cursor/Detector"]
polygon = PoolVector2Array( -16, 16, -16, -16, 16, -16, -16, 16 )

[node name="Cube" type="Sprite" parent="Cursor"]
visible = false
modulate = Color( 1, 1, 1, 0.45098 )
texture = ExtResource( 1 )

[node name="SlantTile" type="Sprite" parent="Cursor"]
visible = false
modulate = Color( 1, 1, 1, 0.45098 )
rotation = 1.57079
texture = ExtResource( 12 )

[node name="Sphere" type="Sprite" parent="Cursor"]
visible = false
modulate = Color( 1, 1, 1, 0.45098 )
texture = ExtResource( 13 )

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2( 640, 360 )
rotating = true
current = true
process_mode = 0

[node name="TileMap" type="TileMap" parent="." groups=[
"Untouchable",
]]
z_index = 1
tile_set = SubResource( 9 )
format = 1
tile_data = PoolIntArray( -851972, 0, 0, -917481, 0, 0, -786436, 0, 0, -851945, 0, 0, -720900, 0, 0, -786409, 0, 0, -655364, 0, 0, -720873, 0, 0, -589828, 0, 0, -655337, 0, 0, -524292, 0, 0, -589801, 0, 0, -458756, 0, 0, -524265, 0, 0, -393220, 0, 0, -393219, 2, 0, -458730, 1, 0, -458729, 0, 0, -327684, 0, 0, -327683, 0, 0, -327682, 2, 0, -393195, 1, 0, -393194, 0, 0, -393193, 0, 0, -262148, 0, 0, -262147, 0, 0, -262146, 0, 0, -262145, 2, 0, -327660, 1, 0, -327659, 0, 0, -327658, 0, 0, -327657, 0, 0, -196612, 0, 0, -196611, 0, 0, -196610, 0, 0, -196609, 0, 0, -262124, 0, 0, -262123, 0, 0, -262122, 0, 0, -262121, 0, 0, -131076, 0, 0, -131075, 0, 0, -131074, 0, 0, -131073, 0, 0, -196588, 0, 0, -196587, 0, 0, -196586, 0, 0, -196585, 0, 0, -65540, 0, 0, -65539, 0, 0, -65538, 0, 0, -65537, 0, 0, -131052, 0, 0, -131051, 0, 0, -131050, 0, 0, -131049, 0, 0, -4, 0, 0, -3, 0, 0, -2, 0, 0, -1, 0, 0, -65516, 0, 0, -65515, 0, 0, -65514, 0, 0, -65513, 0, 0, 65532, 0, 0, 65533, 0, 0, 65534, 0, 0, 65535, 0, 0, 20, 0, 0, 21, 0, 0, 22, 0, 0, 23, 0, 0, 131068, 0, 0, 131069, 0, 0, 131070, 0, 0, 131071, 0, 0, 65556, 0, 0, 65557, 0, 0, 65558, 0, 0, 65559, 0, 0, 196604, 0, 0, 196605, 0, 0, 196606, 0, 0, 196607, 0, 0, 131092, 0, 0, 131093, 0, 0, 131094, 0, 0, 131095, 0, 0, 262140, 0, 0, 262141, 0, 0, 262142, 0, 0, 262143, 0, 0, 196628, 0, 0, 196629, 0, 0, 196630, 0, 0, 196631, 0, 0, 327676, 0, 0, 327677, 0, 0, 327678, 0, 0, 327679, 0, 0, 262164, 0, 0, 262165, 0, 0, 262166, 0, 0, 262167, 0, 0, 393212, 0, 0, 393213, 0, 0, 393214, 0, 0, 393215, 0, 0, 327700, 0, 0, 327701, 0, 0, 327702, 0, 0, 327703, 0, 0, 458748, 0, 0, 458749, 0, 0, 458750, 0, 0, 458751, 0, 0, 393236, 0, 0, 393237, 0, 0, 393238, 0, 0, 393239, 0, 0, 524284, 0, 0, 524285, 0, 0, 524286, 0, 0, 524287, 0, 0, 458772, 0, 0, 458773, 0, 0, 458774, 0, 0, 458775, 0, 0, 589820, 0, 0, 589821, 0, 0, 589822, 0, 0, 589823, 0, 0, 524308, 0, 0, 524309, 0, 0, 524310, 0, 0, 524311, 0, 0, 655356, 0, 0, 655357, 0, 0, 655358, 0, 0, 655359, 0, 0, 589844, 0, 0, 589845, 0, 0, 589846, 0, 0, 589847, 0, 0, 720892, 0, 0, 720893, 0, 0, 720894, 0, 0, 720895, 0, 0, 655380, 0, 0, 655381, 0, 0, 655382, 0, 0, 655383, 0, 0, 786428, 0, 0, 786429, 0, 0, 786430, 0, 0, 786431, 0, 0, 720896, 0, 0, 720897, 0, 0, 720898, 0, 0, 720899, 0, 0, 720900, 0, 0, 720901, 0, 0, 720902, 0, 0, 720903, 0, 0, 720904, 0, 0, 720905, 0, 0, 720906, 0, 0, 720907, 0, 0, 720908, 0, 0, 720909, 0, 0, 720910, 0, 0, 720911, 0, 0, 720912, 0, 0, 720913, 0, 0, 720914, 0, 0, 720915, 0, 0, 720916, 0, 0, 720917, 0, 0, 720918, 0, 0, 720919, 0, 0, 851964, 0, 0, 851965, 0, 0, 851966, 0, 0, 851967, 0, 0, 786432, 0, 0, 786433, 0, 0, 786434, 0, 0, 786435, 0, 0, 786436, 0, 0, 786437, 0, 0, 786438, 0, 0, 786439, 0, 0, 786440, 0, 0, 786441, 0, 0, 786442, 0, 0, 786443, 0, 0, 786444, 0, 0, 786445, 0, 0, 786446, 0, 0, 786447, 0, 0, 786448, 0, 0, 786449, 0, 0, 786450, 0, 0, 786451, 0, 0, 786452, 0, 0, 786453, 0, 0, 786454, 0, 0, 786455, 0, 0, 917500, 0, 0, 917501, 0, 0, 917502, 0, 0, 917503, 0, 0, 851968, 0, 0, 851969, 0, 0, 851970, 0, 0, 851971, 0, 0, 851972, 0, 0, 851973, 0, 0, 851974, 0, 0, 851975, 0, 0, 851976, 0, 0, 851977, 0, 0, 851978, 0, 0, 851979, 0, 0, 851980, 0, 0, 851981, 0, 0, 851982, 0, 0, 851983, 0, 0, 851984, 0, 0, 851985, 0, 0, 851986, 0, 0, 851987, 0, 0, 851988, 0, 0, 851989, 0, 0, 851990, 0, 0, 851991, 0, 0, 983036, 0, 0, 983037, 0, 0, 983038, 0, 0, 983039, 0, 0, 917504, 0, 0, 917505, 0, 0, 917506, 0, 0, 917507, 0, 0, 917508, 0, 0, 917509, 0, 0, 917510, 0, 0, 917511, 0, 0, 917512, 0, 0, 917513, 0, 0, 917514, 0, 0, 917515, 0, 0, 917516, 0, 0, 917517, 0, 0, 917518, 0, 0, 917519, 0, 0, 917520, 0, 0, 917521, 0, 0, 917522, 0, 0, 917523, 0, 0, 917524, 0, 0, 917525, 0, 0, 917526, 0, 0, 917527, 0, 0, 1048572, 0, 0, 1048573, 0, 0, 1048574, 0, 0, 1048575, 0, 0, 983040, 0, 0, 983041, 0, 0, 983042, 0, 0, 983043, 0, 0, 983044, 0, 0, 983045, 0, 0, 983046, 0, 0, 983047, 0, 0, 983048, 0, 0, 983049, 0, 0, 983050, 0, 0, 983051, 0, 0, 983052, 0, 0, 983053, 0, 0, 983054, 0, 0, 983055, 0, 0, 983056, 0, 0, 983057, 0, 0, 983058, 0, 0, 983059, 0, 0, 983060, 0, 0, 983061, 0, 0, 983062, 0, 0, 983063, 0, 0 )

[node name="Ragdoll" parent="." instance=ExtResource( 17 )]
modulate = Color( 0.494118, 0, 0, 1 )
position = Vector2( 208, 576 )

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="FpsCount" type="RichTextLabel" parent="CanvasLayer"]
pause_mode = 2
visible = false
margin_right = 472.0
margin_bottom = 40.0
custom_fonts/normal_font = SubResource( 10 )
text = "FPS: 60"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ObjectCount" type="RichTextLabel" parent="CanvasLayer"]
pause_mode = 2
visible = false
margin_top = 48.0
margin_right = 1280.0
margin_bottom = 192.0
custom_fonts/normal_font = SubResource( 10 )
text = "OBJECTS:"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Inventory" type="Control" parent="CanvasLayer"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Inventory"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 56.0
margin_right = -40.0
margin_bottom = -48.0
color = Color( 0, 0, 0, 0.733333 )

[node name="Title" type="RichTextLabel" parent="CanvasLayer/Inventory"]
margin_left = 408.0
margin_top = 80.0
margin_right = 840.0
margin_bottom = 168.0
custom_fonts/normal_font = SubResource( 11 )
text = "INVENTORY"
scroll_active = false

[node name="CUBE" type="Button" parent="CanvasLayer/Inventory"]
margin_left = 64.0
margin_top = 176.0
margin_right = 315.0
margin_bottom = 264.0
custom_fonts/font = SubResource( 12 )
text = "CUBE"
icon = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SPHERE" type="Button" parent="CanvasLayer/Inventory"]
margin_left = 64.0
margin_top = 288.0
margin_right = 327.0
margin_bottom = 384.0
custom_fonts/font = SubResource( 12 )
text = "SPHERE"
icon = ExtResource( 13 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SPAWNER" type="Button" parent="CanvasLayer/Inventory"]
margin_left = 352.0
margin_top = 408.0
margin_right = 697.0
margin_bottom = 504.0
custom_fonts/font = SubResource( 12 )
text = "SPAWNER"
icon = ExtResource( 8 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DRAG" type="Button" parent="CanvasLayer/Inventory"]
margin_left = 896.0
margin_top = 392.0
margin_right = 1213.0
margin_bottom = 488.0
custom_fonts/font = SubResource( 12 )
text = "DRAG"
icon = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CLEAR" type="Button" parent="CanvasLayer/Inventory"]
margin_left = 895.0
margin_top = 152.0
margin_right = 1217.0
margin_bottom = 248.0
custom_fonts/font = SubResource( 12 )
text = "CLEAR ITEMS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QUIT" type="Button" parent="CanvasLayer/Inventory"]
margin_left = 56.0
margin_top = 588.0
margin_right = 240.0
margin_bottom = 652.0
custom_fonts/font = SubResource( 12 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
text = "QUIT "
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PROPERTIES" type="Button" parent="CanvasLayer/Inventory"]
margin_left = 896.0
margin_top = 264.0
margin_right = 1213.0
margin_bottom = 376.0
custom_fonts/font = SubResource( 12 )
text = "PROPERTIES"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUMANOID" type="Button" parent="CanvasLayer/Inventory"]
margin_left = 352.0
margin_top = 176.0
margin_right = 697.0
margin_bottom = 272.0
custom_fonts/font = SubResource( 12 )
text = "HUMANOID"
icon = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SLANTED" type="Button" parent="CanvasLayer/Inventory"]
margin_left = 352.0
margin_top = 296.0
margin_right = 697.0
margin_bottom = 384.0
custom_fonts/font = SubResource( 12 )
text = "SLANTED"
icon = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FullScreenOption" type="CheckButton" parent="CanvasLayer/Inventory"]
margin_left = 895.0
margin_top = 496.0
margin_right = 1216.0
margin_bottom = 547.0
custom_fonts/font = SubResource( 13 )
text = "FULLSCREEN"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="GlowOption" type="CheckButton" parent="CanvasLayer/Inventory"]
margin_left = 897.001
margin_top = 552.0
margin_right = 1218.0
margin_bottom = 603.0
custom_fonts/font = SubResource( 13 )
text = "GLOW"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DebugOption" type="CheckButton" parent="CanvasLayer/Inventory"]
margin_left = 897.001
margin_top = 604.0
margin_right = 1218.0
margin_bottom = 655.0
custom_fonts/font = SubResource( 13 )
text = "COUNTER"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Properties" type="Control" parent="CanvasLayer"]
pause_mode = 2
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 6 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Properties"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 40.0
margin_top = 56.0
margin_right = -40.0
margin_bottom = -48.0
color = Color( 0, 0, 0, 0.733333 )

[node name="Title" type="RichTextLabel" parent="CanvasLayer/Properties"]
margin_left = 280.0
margin_top = 80.0
margin_right = 1024.0
margin_bottom = 168.0
custom_fonts/normal_font = SubResource( 11 )
text = "OBJECT PROPERTIES"
scroll_active = false

[node name="ColorPicker" type="ColorPicker" parent="CanvasLayer/Properties"]
anchor_left = 0.670313
anchor_top = 0.227778
anchor_right = 0.910937
anchor_bottom = 0.869444
margin_left = 4.0
margin_top = 4.0
margin_right = 4.0
margin_bottom = 4.0
alignment = 1
__meta__ = {
"_edit_use_anchors_": true
}

[node name="RotationSpeed" type="HSlider" parent="CanvasLayer/Properties"]
margin_left = 80.0
margin_top = 200.0
margin_right = 352.0
margin_bottom = 234.0
min_value = 1.0
max_value = 20.0
value = 5.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RotationIndicator" type="RichTextLabel" parent="CanvasLayer/Properties"]
margin_left = 80.0
margin_top = 160.0
margin_right = 376.0
margin_bottom = 200.0
custom_fonts/normal_font = SubResource( 14 )
text = "Rotation Speed: 5"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DirectionLabel" type="RichTextLabel" parent="CanvasLayer/Properties"]
margin_left = 80.0
margin_top = 352.0
margin_right = 224.0
margin_bottom = 392.0
custom_fonts/normal_font = SubResource( 14 )
text = "Direction:"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpawnerLabel" type="RichTextLabel" parent="CanvasLayer/Properties"]
margin_left = 456.0
margin_top = 168.0
margin_right = 760.0
margin_bottom = 208.0
custom_fonts/normal_font = SubResource( 14 )
text = "Spawner Properties:"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpawnerLabel2" type="RichTextLabel" parent="CanvasLayer/Properties"]
margin_left = 456.0
margin_top = 216.0
margin_right = 696.0
margin_bottom = 256.0
custom_fonts/normal_font = SubResource( 14 )
text = "Spawn Position:"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpawnerLabel3" type="RichTextLabel" parent="CanvasLayer/Properties"]
margin_left = 456.0
margin_top = 261.0
margin_right = 696.0
margin_bottom = 301.0
custom_fonts/normal_font = SubResource( 14 )
text = "Spawn Object:"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpawnerLabel4" type="RichTextLabel" parent="CanvasLayer/Properties"]
margin_left = 456.0
margin_top = 360.0
margin_right = 808.0
margin_bottom = 400.0
custom_fonts/normal_font = SubResource( 14 )
text = "Spawn Cooldown:"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LinearValue" type="HSlider" parent="CanvasLayer/Properties"]
margin_left = 80.0
margin_top = 318.0
margin_right = 352.0
margin_bottom = 352.0
max_value = 3500.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LinearIndicator" type="RichTextLabel" parent="CanvasLayer/Properties"]
margin_left = 80.0
margin_top = 278.0
margin_right = 376.0
margin_bottom = 318.0
custom_fonts/normal_font = SubResource( 14 )
text = "Initial Speed: "
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="StaticBodyChecker" type="CheckButton" parent="CanvasLayer/Properties"]
margin_left = 80.0
margin_top = 231.0
margin_right = 368.0
margin_bottom = 278.0
custom_fonts/font = SubResource( 15 )
text = "Static Body?"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BACK" type="Button" parent="CanvasLayer/Properties"]
margin_left = 1040.0
margin_top = 72.0
margin_right = 1217.0
margin_bottom = 151.0
custom_fonts/font = SubResource( 16 )
text = "BACK"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="LinearDropdown" type="OptionButton" parent="CanvasLayer/Properties"]
margin_left = 232.0
margin_top = 352.0
margin_right = 355.0
margin_bottom = 397.0
custom_fonts/font = SubResource( 17 )
text = "UP"
align = 1
items = [ "UP", null, false, 0, null, "DOWN", null, false, 1, null, "LEFT", null, false, 2, null, "RIGHT", null, false, 3, null ]
selected = 0

[node name="SpawnerDropdown" type="OptionButton" parent="CanvasLayer/Properties"]
margin_left = 704.0
margin_top = 216.0
margin_right = 827.0
margin_bottom = 261.0
custom_fonts/font = SubResource( 17 )
text = "UP"
align = 1
items = [ "UP", null, false, 0, null, "DOWN", null, false, 1, null, "LEFT", null, false, 2, null, "RIGHT", null, false, 3, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpawnerObject" type="OptionButton" parent="CanvasLayer/Properties"]
margin_left = 456.0
margin_top = 304.0
margin_right = 827.0
margin_bottom = 349.0
custom_fonts/font = SubResource( 17 )
text = "CUBE"
align = 1
items = [ "CUBE", null, false, 0, null, "SPHERE", null, false, 1, null, "HUMANOID", null, false, 2, null, "SLANTED TILE", null, false, 3, null ]
selected = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SpawnCooldown" type="HSlider" parent="CanvasLayer/Properties"]
margin_left = 464.0
margin_top = 408.0
margin_right = 800.0
margin_bottom = 432.0
min_value = 0.1
max_value = 10.0
step = 0.1
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Preview" type="Sprite" parent="CanvasLayer/Properties"]
position = Vector2( 224, 505 )
scale = Vector2( 5, 3 )
texture = ExtResource( 1 )

[node name="PreviewYSlider" type="VSlider" parent="CanvasLayer/Properties"]
margin_left = 392.0
margin_top = 415.0
margin_right = 408.0
margin_bottom = 607.0
min_value = 1.0
max_value = 3.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PreviewHSlider" type="HSlider" parent="CanvasLayer/Properties"]
margin_left = 64.0
margin_top = 616.0
margin_right = 384.0
margin_bottom = 632.0
min_value = 1.0
max_value = 5.0
value = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Startup" type="Control" parent="CanvasLayer"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 18 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Rect" type="ColorRect" parent="CanvasLayer/Startup"]
anchor_right = 1.0
anchor_bottom = 1.0
color = Color( 0, 0, 0, 0.584314 )

[node name="Begin" type="Button" parent="CanvasLayer/Startup"]
margin_left = 64.0
margin_top = 144.0
margin_right = 344.0
margin_bottom = 234.0
custom_fonts/font = SubResource( 18 )
text = "BEGIN"

[node name="Title" type="RichTextLabel" parent="CanvasLayer/Startup"]
margin_left = 64.0
margin_top = 40.0
margin_right = 592.0
margin_bottom = 136.0
custom_fonts/normal_font = SubResource( 19 )
text = "PHYSICA"
scroll_active = false

[node name="Info" type="RichTextLabel" parent="CanvasLayer/Startup"]
margin_left = 8.0
margin_top = 664.0
margin_right = 584.0
margin_bottom = 696.0
custom_fonts/normal_font = SubResource( 20 )
text = "This program is still in development! (v1.0)"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HelpSection" type="Control" parent="CanvasLayer/Startup"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorRect" type="ColorRect" parent="CanvasLayer/Startup/HelpSection"]
margin_left = 672.0
margin_top = 26.0
margin_right = 1216.0
margin_bottom = 664.0
color = Color( 0.219608, 1, 0, 0.498039 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HELP TITLE" type="RichTextLabel" parent="CanvasLayer/Startup/HelpSection"]
margin_left = 704.0
margin_top = 40.0
margin_right = 896.0
margin_bottom = 128.0
custom_fonts/normal_font = SubResource( 21 )
text = "HELP"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Description" type="RichTextLabel" parent="CanvasLayer/Startup/HelpSection"]
margin_left = 704.0
margin_top = 136.0
margin_right = 1176.0
margin_bottom = 630.0
custom_fonts/normal_font = SubResource( 22 )
text = "Welcome to Physica! 
This program is intended to simulate various objects in a closed environment. To get started, press the Esc Button to get to the menu. 

To drag an item, hover your mouse to the object and press the left mouse button. To release it, release the left mouse button.

To add a specific object, head over to the inventory and pick the object you would like to instance. To instance the object, hoverr to the location you would like to instance the object and press the left mouse button. To remove an object, hover to the position of the object and press the right mouse button.

To access the properties of the object, head over to the inventory and click the \"Properties\" button. You can adjust various settings from there.

And lastly, have fun!"

[node name="ItchLink" type="LinkButton" parent="CanvasLayer/Startup"]
margin_left = 8.0
margin_top = 630.0
margin_right = 248.0
margin_bottom = 664.0
custom_fonts/font = SubResource( 23 )
custom_colors/font_color = Color( 0, 0.0392157, 1, 1 )
custom_colors/font_color_hover = Color( 0.0313726, 0, 0.25098, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0.207843, 1 )
text = "Follow SimonBoi"

[node name="WorldEnvironment" type="WorldEnvironment" parent="." groups=[
"WorldEnv",
]]
environment = SubResource( 24 )
[connection signal="OpenObjProperties" from="CanvasLayer/Inventory" to="CanvasLayer/Properties" method="_on_Inventory_OpenObjProperties"]
[connection signal="pressed" from="CanvasLayer/Inventory/CUBE" to="CanvasLayer/Inventory" method="_on_CUBE_pressed"]
[connection signal="pressed" from="CanvasLayer/Inventory/SPHERE" to="CanvasLayer/Inventory" method="_on_SPHERE_pressed"]
[connection signal="pressed" from="CanvasLayer/Inventory/SPAWNER" to="CanvasLayer/Inventory" method="_on_SPAWNER_pressed"]
[connection signal="pressed" from="CanvasLayer/Inventory/DRAG" to="CanvasLayer/Inventory" method="_on_DRAG_pressed"]
[connection signal="pressed" from="CanvasLayer/Inventory/CLEAR" to="CanvasLayer/Inventory" method="_on_CLEAR_pressed"]
[connection signal="pressed" from="CanvasLayer/Inventory/QUIT" to="CanvasLayer/Inventory" method="_on_QUIT_pressed"]
[connection signal="pressed" from="CanvasLayer/Inventory/PROPERTIES" to="CanvasLayer/Inventory" method="_on_PROPERTIES_pressed"]
[connection signal="pressed" from="CanvasLayer/Inventory/HUMANOID" to="CanvasLayer/Inventory" method="_on_HUMANOID_pressed"]
[connection signal="pressed" from="CanvasLayer/Inventory/SLANTED" to="CanvasLayer/Inventory" method="_on_SLANTED_pressed"]
[connection signal="toggled" from="CanvasLayer/Inventory/FullScreenOption" to="CanvasLayer/Inventory" method="_on_FullScreenOption_toggled"]
[connection signal="toggled" from="CanvasLayer/Inventory/GlowOption" to="CanvasLayer/Inventory" method="_on_GlowOption_toggled"]
[connection signal="toggled" from="CanvasLayer/Inventory/DebugOption" to="CanvasLayer/Inventory" method="_on_DebugOption_toggled"]
[connection signal="CloseObjProperties" from="CanvasLayer/Properties" to="CanvasLayer/Inventory" method="_on_Properties_CloseObjProperties"]
[connection signal="toggled" from="CanvasLayer/Properties/StaticBodyChecker" to="CanvasLayer/Inventory" method="_on_CheckButton_toggled"]
[connection signal="pressed" from="CanvasLayer/Properties/BACK" to="CanvasLayer/Properties" method="_on_BACK_pressed"]
[connection signal="pressed" from="CanvasLayer/Startup/Begin" to="CanvasLayer/Startup" method="_on_Begin_pressed"]
[connection signal="pressed" from="CanvasLayer/Startup/ItchLink" to="CanvasLayer/Startup" method="_on_ItchLink_pressed"]
